--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,30 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.css"
+      integrity="sha512-RCGG1PJuk9/28eeYNu0bIcQVnrpqe3B9iKGbnQLlNCDdJ2pYW3ru0I2MUen+qFTIUywPnNJDhoTsCg8Sjqrehg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
+  
   <body>
-      <form class="search-form" id="search-form">
+    <header class="header">
+        <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
         <button type="submit">Search</button>
       </form>
+    </header>
+    
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more hiddenBtn">Load more</button>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.1/simple-lightbox.min.js"
+      integrity="sha512-BhE5J0LlN4PNea87xXSa65zUFN2eAiZaO2Dybd5bCUyoNAFphxpG6A5DwCD3RV0iqjqMpuXVzmbAML76ofjeyA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      
     <script src="./index.js"></script>
   </body>
 </html>
